Fix timeline line wrap

--- a/src/components/postTimeline/postTimeline.scss
+++ b/src/components/postTimeline/postTimeline.scss
@@ -7,15 +7,13 @@
 }
 
 .timeline {
-  display: table; //*For Firefox
-  &:after {
+  &:before {
     content: '';
     width: 2px;
     position: absolute;
-    top: .5rem;
+    top: 1rem;
     bottom: 0rem;
     left: 60px;
-    z-index: 1;
     background: #C5C5C5;
   }
   h3 {
@@ -23,12 +21,17 @@
     position: sticky;
     top: 5rem;
     margin: 0;
-    font: {
-      size: 1em;
-      weight: 400;
-    }
-    @media (min-width: 62em) {
-      font-size: 1.1em;
+    font-size: 1.4em;
+    &:before {
+      content: '';
+      width: 10px;
+      height: 10px;
+      background: #C5C5C5;
+      border: 2px solid #FFFFFF;
+      @include border-radius(50%);
+      position: absolute;
+      left: 56px;
+      top: 10px;
     }
   }
   section.year {
@@ -43,45 +46,11 @@
     section {
       position: relative;
       margin-bottom: 1em;
-      h4 {
-        position: absolute;
-        bottom: 0;
-        font: {
-          size: .9em;
-          weight: 400;
-        }
-        line-height: 1.2em;
-        margin: 0;
-        padding: 0 0 0 89px;
-        color: #C5C5C5;
-        @media (min-width: 62em) {
-          font-size: 1em;
-        }
-      }
       ul {
         list-style-type: none;
-        padding: 0 0 0 75px;
-        margin: -1.35rem 0 1em;
-        max-width: 32rem;
-        font-size: 1em;
-        @media (min-width: 62em) {
-          font-size: 1.1em;
-          padding: 0 0 0 81px;
-        }
+        padding: 0 0 0 81px;
         &:last-child {
           margin-bottom: 0;
-        }
-        &:first-of-type:after {
-          content: '';
-          width: 10px;
-          height: 10px;
-          background: #C5C5C5;
-          border: 2px solid #FFFFFF;
-          @include border-radius(50%);
-          position: absolute;
-          left: 56px;
-          top: 3px;
-          z-index: 2;
         }
         li {
           margin-left: .5rem;
@@ -93,12 +62,12 @@
           &:not(:first-child) {
             margin-top: .5rem;
           }
-          span.price {
-            color: mediumturquoise;
-            font-weight: 500;
-          }
         }
       }
     }
   }
 }
+
+//* {
+//  border: 1px solid #f00 !important;
+//}
